navbar and deck container visibleness fix

--- a/src/deck-container/deck-container.component.scss
+++ b/src/deck-container/deck-container.component.scss
@@ -2,7 +2,7 @@
     position: absolute;
     display: flex;
     justify-content: right;
-    width: 100dvw;
+    width: 30dvw;
     top: 20px;
     right: 20px;
 }
