--- a/src/navbar-container/navbar-container.component.scss
+++ b/src/navbar-container/navbar-container.component.scss
@@ -2,6 +2,9 @@
     position: absolute;
     display: flex;
     justify-content: center;
-    width: 100dvw;
+    width: 50dvw;
     top: 20px;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
